--- a/NAPS2.Console/NAPS2.Console.csproj
+++ b/NAPS2.Console/NAPS2.Console.csproj
@@ -149,7 +149,7 @@ editbin /LARGEADDRESSAWARE "$(TargetPath)"</PostBuildEvent>
   -->
   <Import Project="..\NAPS2\Setup\CommonTargets.targets" />
   <PropertyGroup>
-    <PostBuildEvent>call "$(MSBuildBinPath)\..\..\..\VC\Auxiliary\Build\vcvars32.bat" x86
+    <PostBuildEvent>call "$(MSBuildBinPath)\..\..\..\..\VC\Auxiliary\Build\vcvars32.bat" x86
 editbin /LARGEADDRESSAWARE "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
