--- a/NAPS2/NAPS2.csproj
+++ b/NAPS2/NAPS2.csproj
@@ -272,7 +272,7 @@
   <Import Project="..\NAPS2\Setup\CommonTargets.targets" />
   <PropertyGroup>
     <PostBuildEvent>
-      call "$(MSBuildBinPath)\..\..\..\VC\Auxiliary\Build\vcvars32.bat" x86
+      call "$(MSBuildBinPath)\..\..\..\..\VC\Auxiliary\Build\vcvars32.bat" x86
       editbin /LARGEADDRESSAWARE "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
