--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -6155,6 +6155,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\wireless16.png" />
+    <None Include="Resources\sharpen.png" />
+    <None Include="Resources\color_management.png" />
+    <None Include="Resources\color_adjustment.png" />
+    <None Include="Resources\contrast_high.png" />
+    <None Include="Resources\contrast.png" />
+    <None Include="Resources\transform_crop.png" />
+    <None Include="Resources\arrow_right.png" />
+    <None Include="Resources\arrow_left.png" />
     <None Include="Icons\btn_donate_LG.gif" />
     <None Include="Icons\application_cascade.png" />
     <Content Include="Icons\application_cascade.ico" />
