-Adding more button to scan when editing images (rescan/add/insert before). Note that only buttons are there and disabled. Functionnality will be added later. - Adding a status bar for image informations. No data displayed for the moment.

--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -6155,6 +6155,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\wireless16.png" />
+    <None Include="Resources\arrow_undo.png" />
+    <None Include="Resources\add.png" />
+    <None Include="Resources\arrow_repeat.png" />
     <None Include="Resources\sharpen.png" />
     <None Include="Resources\color_management.png" />
     <None Include="Resources\color_adjustment.png" />
