Worked the main menu. Added a new item to hide/display the viewer

--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -6155,6 +6155,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\wireless16.png" />
+    <None Include="Resources\toolbox.png" />
+    <None Include="Resources\view_fullscreen_view.png" />
     <None Include="Resources\transform_shear.png" />
     <None Include="Resources\arrow_undo.png" />
     <None Include="Resources\add.png" />
