--- a/NAPS2/packages.config
+++ b/NAPS2/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Ninject" version="3.3.6" targetFramework="net45" />
-  <package id="NLog" version="5.0.1" targetFramework="net45" requireReinstallation="true" />
+  <package id="NLog" version="5.0.5" targetFramework="net48" />
 </packages>
