Upgraded to NET Framework 4.8

--- a/NAPS2.DI/packages.config
+++ b/NAPS2.DI/packages.config
@@ -3,5 +3,5 @@
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net40-client" />
   <package id="Ninject" version="3.3.6" targetFramework="net45" />
-  <package id="NLog" version="5.0.5" targetFramework="net451" />
+  <package id="NLog" version="5.0.5" targetFramework="net451" requireReinstallation="true" />
 </packages>
