--- a/NAPS2.Console/packages.config
+++ b/NAPS2.Console/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="2.9.1" targetFramework="net45" />
+  <package id="CommandLineParser" version="2.9.1" targetFramework="net45" requireReinstallation="true" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Ninject" version="3.3.6" targetFramework="net45" />
-  <package id="NLog" version="5.0.5" targetFramework="net451" />
+  <package id="NLog" version="5.0.5" targetFramework="net451" requireReinstallation="true" />
 </packages>
