Added new capabilities in the ConfigureDS (Non-native) TWAIN parameter to give better handling of the images on scan that supports theses capabilities. Tweaked the CSProjects again. Some issues with the GUI Editor that are still not yet fixed.

--- a/NAPS2.Server/NAPS2.Server.csproj
+++ b/NAPS2.Server/NAPS2.Server.csproj
@@ -45,7 +45,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'InstallerEXE|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\InstallerEXE\</OutputPath>
