Fixed issue with application building in 32 bit. Thanks Cyanfish!

--- a/NAPS2.Worker/NAPS2.Worker.csproj
+++ b/NAPS2.Worker/NAPS2.Worker.csproj
@@ -29,7 +29,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'InstallerEXE|AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\InstallerEXE\</OutputPath>
