Added a new type of operation to scan the barcodes from the image and store them in the image data. TODO: Add interface to it and save functions to the recovery data XML

--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -257,6 +257,7 @@
     <Compile Include="Config\SaveButtonDefaultAction.cs" />
     <Compile Include="Platform\DefaultRuntimeCompat.cs" />
     <Compile Include="Scan\Exceptions\DriverNotSupportedException.cs" />
+    <Compile Include="Scan\Images\BarCodeOperation.cs" />
     <Compile Include="Scan\Images\HoughLineDeskewer.cs" />
     <Compile Include="Scan\Images\ScannedImageSource.cs" />
     <Compile Include="Scan\KeyValueScanOptions.cs" />
