--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -6223,6 +6223,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\wireless16.png" />
+    <None Include="Resources\barcodePetit.png" />
     <None Include="Resources\diskette.png" />
     <None Include="Resources\numeric_stepper.png" />
     <None Include="Resources\image_edit.png" />
