Added french translation for the export panel. (english - french for the moment) Displaying the page side in the image info Todo: PageSide is saved, but not retrieved when we load back the project.

--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -364,6 +364,11 @@
     <Compile Include="WinForms\OperationProgressNotifyWidget.Designer.cs">
       <DependentUpon>OperationProgressNotifyWidget.cs</DependentUpon>
     </Compile>
+    <Compile Include="WinForms\Resource1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource1.resx</DependentUpon>
+    </Compile>
     <Compile Include="WinForms\ServerNotifyIcon.cs" />
     <Compile Include="WinForms\UpdateAvailableNotifyWidget.cs">
       <SubType>UserControl</SubType>
@@ -848,6 +853,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Icons.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WinForms\FExport.FR.resx">
+      <DependentUpon>FExport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WinForms\FExport.resx">
       <DependentUpon>FExport.cs</DependentUpon>
@@ -5799,6 +5807,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="WinForms\NotifyWidget.zh-TW.resx" Condition="'$(Configuration)' != 'Debug'">
       <DependentUpon>NotifyWidget.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WinForms\Resource1.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="WinForms\ThumbnailList.af.resx" Condition="'$(Configuration)' != 'Debug'">
       <DependentUpon>ThumbnailList.cs</DependentUpon>
