Rework the way the data is saved, by using a new structure instead on using another one and putting new data in it. This could reduce the chance of bug later on. Used a temporary check for images export. Will need also to be reworked by at last, it work.

--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Dependencies\MultiFileExternalComponent.cs" />
     <Compile Include="Dependencies\IExternalComponent.cs" />
     <Compile Include="ImportExport\Email\Mapi\MapiWrapper.cs" />
+    <Compile Include="ImportExport\Images\ProjectSettings.cs" />
     <Compile Include="ImportExport\Pdf\PdfImageSettings.cs" />
     <Compile Include="ImportExport\Pdf\GhostscriptManager.cs" />
     <Compile Include="Logging\Event.cs" />
