Added the capabilitie for the Listview to be collapsible. Needed for documents. Using the code for the extended listview from code project (https://www.codeproject.com/Articles/36775/Collapsible-ListViewGroup)

--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -333,6 +333,9 @@
     <Compile Include="Util\WebClientExtensions.cs" />
     <Compile Include="Util\Win32Window.cs" />
     <Compile Include="Logging\WindowsEventLogger.cs" />
+    <Compile Include="WinForms\ExtendedListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WinForms\FConfigurePrj.cs">
       <SubType>Form</SubType>
     </Compile>
