Fix images exportation not working as before because of the new changes. Tested project output and seem to still work ok. Separated project and regular file output.

--- a/NAPS2.Core/NAPS2.Core.csproj
+++ b/NAPS2.Core/NAPS2.Core.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Dependencies\IExternalComponent.cs" />
     <Compile Include="ImportExport\Email\Mapi\MapiWrapper.cs" />
     <Compile Include="ImportExport\Images\ProjectSettings.cs" />
+    <Compile Include="ImportExport\Images\SaveImagesOperationProject.cs" />
     <Compile Include="ImportExport\Pdf\PdfImageSettings.cs" />
     <Compile Include="ImportExport\Pdf\GhostscriptManager.cs" />
     <Compile Include="Logging\Event.cs" />
